# bharat-ticker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  START.md  SUPERBRAIN_INTEGRATION_REQUIREMENTS.md  pyproject.toml  run.py  start.bat
.claude/: launch.json
scripts/: military_test.py  military_test_v2.py  military_test_v3.py  military_test_v4.py  stress_test.py
src/: __init__.py  main.py
src/api/endpoints/: historical.py  market.py  quotes.py  search.py  superbrain.py  websocket.py
src/api/middleware/: market_hours.py
src/cache/: __init__.py  memory_store.py  redis_client.py  ticker_cache.py
src/config/: constants.py  holidays.py  settings.py
src/db/: connection.py  queries.py  schema.sql
src/engine/: chartink.py  circuit_breaker.py  corp_actions.py  failover.py  fundamentals.py  intraday_builder.py  intraday_store.py  live_candles.py  macro.py  market_data.py  rate_limiter.py  tickertape.py  watchlist_recorder.py
src/models/: __init__.py  api_response.py  instrument.py  market_depth.py  ohlcv.py  tick.py
src/providers/: base.py  bse_archive.py  bse_master.py  bse_scraper.py  groww.py  nse_archive.py  nse_live.py  nse_public.py  nse_scraper.py  proxy_pool.py  yahoo_finance.py
src/utils/: fingerprint.py  ist_clock.py  logger.py  user_agents.py  watchdog.py
src/web/: all.html  index.html  sb.html
tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_failover.py  test_ist_clock.py  test_nse_scraper.py  test_rate_limiter.py  test_sb_perf.py  test_yahoo_finance.py
