[project]
name = "bharat-ticker"
version = "1.0.0"
description = "Production-grade Real-Time Indian Stock Market (NSE/BSE) Data Ingestion Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bharat Ticker Team" }]

dependencies = [
    # --- Core Async & HTTP ---
    "httpx>=0.28.0",
    "curl-cffi>=0.7.0",
    "aiohttp>=3.10.0",

    # --- Browser Automation (Fallback) ---
    "playwright>=1.48.0",

    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # --- Data Validation ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # --- Redis ---
    "redis[hiredis]>=5.2.0",

    # --- PostgreSQL / TimescaleDB ---
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

    # --- Financial Data Fallbacks ---
    "yfinance>=0.2.50",

    # --- Time & Scheduling ---
    "pytz>=2024.2",
    "apscheduler>=3.10.4",

    # --- Logging & Monitoring ---
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # --- Utilities ---
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",  # for TestClient
    "locust>=2.32.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The importable package is `src` (modules are imported as `src.main`, etc.).
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
